Fix bug 346430

Make sure the crop tool allways uses the currect image size.

BUG: 346430